@startuml





/' Objects '/

class Queue <template<typename T>> {
	+Queue()
	-headPtr : QueueNode<T>*
	-tailPtr : QueueNode<T>*
	+dequeue() : T
	+isEmpty() : bool
	-count : size_t
	-mutex : std::mutex
	+enqueue(const T& value) : void
}


class QueueNode <template<typename T>> {
	+QueueNode(T value)
	+getNext() : QueueNode<T>*
	-next : QueueNode<T>*
	+getValue() : T
	-value : T
	+setNext(QueueNode<T>* nextNode) : void
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.Queue "2" *-- .QueueNode


.QueueNode *-- .QueueNode






/' Nested objects '/



@enduml

